BajiDeveloperEdition/src/objects/Coloured_Text__c.object
<CustomObject>
    <fields>
        <fullName>Colour_1__c</fullName>
        <label>Colour_1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colour_2__c</fullName>
        <label>Colour_2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_1__c</fullName>
        <label>Field_1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_2__c</fullName>
        <label>Field_2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Coloured_Text</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Coloured_Text Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coloured_Texts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>